added tag element and php validation for ADD.

--- a/application/views/index.html
+++ b/application/views/index.html
@@ -1,10 +1,10 @@
 <html>
 <head>
-	<title>403 Forbidden</title>
+	<title>SUCCESS</title>
 </head>
 <body>
 
-<p>Directory access is forbidden.</p>
+<p>SUCCESS!</p>
 
 </body>
 </html>
